fix: Copyright appearing incorrectly on mobile (iOS)

--- a/src/Follow.css
+++ b/src/Follow.css
@@ -1,6 +1,6 @@
 .Follow {
   background: #ff7367;
-  min-height: 30vh;
+  min-height: 28vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -38,6 +38,5 @@
     font-weight: 400;
     font-size: 0.7rem;
     text-transform: none;
-    position: absolute;
-    bottom: 0;
+    margin-top: auto;
   }
